# deep_research_agent

./: .dockerignore  .env  .env.example  Dockerfile  README.md  __init__.py  architecture.md  main.py  pyproject.toml
agent/: __init__.py  deep_agent.py  prompts.py  subagents.py
app/: __init__.py  cli.py  telegram_bot.py
config/: settings.py
core/: agent_service.py  events.py  output_formatter.py
log/: __init__.py  logger.py
memory/: __init__.py  memory.json  schema.py  store.py
skills/: __init__.py  complexity.py  pattern_classifier.py  ranking.py  simulator.py
tools/: content_extractor.py  internet_search.py  leetcode_scraper.py  memory_store_tool.py  similarity.py
